<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="order"
            type="com.dsm.model.Order" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_receipt_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/receipt"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_restaurant_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/receipt_restaurant_name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintTop_toBottomOf="@id/tv_receipt_label" />

            <TextView
                android:id="@+id/tv_restaurant_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/tv_restaurant_name_label"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toTopOf="@id/tv_restaurant_name_label" />

            <TextView
                android:id="@+id/tv_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/receipt_address"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintTop_toBottomOf="@id/tv_restaurant_name" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/tv_address_label"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toTopOf="@id/tv_address_label" />

            <TextView
                android:id="@+id/tv_date_of_sale_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/receipt_date_of_sale"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintTop_toBottomOf="@id/tv_address" />

            <TextView
                android:id="@+id/tv_date_of_sale"
                date="@{order.orderTime}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                app:layout_constraintLeft_toRightOf="@id/tv_date_of_sale_label"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toTopOf="@id/tv_date_of_sale_label" />

            <View
                android:id="@+id/view_line1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/black"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toBottomOf="@id/tv_date_of_sale" />

            <View
                android:id="@+id/view_line2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/black"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toBottomOf="@id/view_line1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ordered"
                ordered="@{order.orderDetail}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toBottomOf="@id/view_line2" />

            <View
                android:id="@+id/view_line3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/black"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toBottomOf="@id/rv_ordered" />

            <TextView
                android:id="@+id/tv_total_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_price"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintTop_toBottomOf="@id/view_line3" />

            <TextView
                android:id="@+id/tv_total_price"
                priceText="@{order.totalPrice}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toTopOf="@id/tv_total_price_label" />

            <TextView
                android:id="@+id/tv_discount_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/discount_price"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintTop_toBottomOf="@id/tv_total_price_label" />

            <TextView
                android:id="@+id/tv_discount_price"
                priceText="@{order.discountPrice}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toTopOf="@id/tv_discount_price_label" />

            <View
                android:id="@+id/view_line4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/black"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toBottomOf="@id/tv_discount_price_label" />

            <TextView
                android:id="@+id/tv_final_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/final_price"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintTop_toBottomOf="@id/view_line4" />

            <TextView
                priceText="@{order.totalPrice - order.discountPrice}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toTopOf="@id/tv_final_price_label" />

            <View
                android:id="@+id/view_line5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/black"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toBottomOf="@id/tv_final_price_label" />

            <View
                android:id="@+id/view_line6"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/black"
                app:layout_constraintLeft_toLeftOf="@id/gl_left"
                app:layout_constraintRight_toRightOf="@id/gl_right"
                app:layout_constraintTop_toBottomOf="@id/view_line5" />

            <Button
                android:id="@+id/btn_delivery_complete"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/bg_button_enable"
                android:text="@string/delivery_complete"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_line6" />

            <Button
                android:id="@+id/btn_call"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_button_enable"
                android:text="@string/call"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/btn_delivery_complete"
                app:layout_constraintRight_toRightOf="@id/btn_delivery_complete"
                app:layout_constraintTop_toBottomOf="@id/btn_delivery_complete" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>